--- a/webapp/golang/templates/banned.html
+++ b/webapp/golang/templates/banned.html
@@ -7,6 +7,7 @@
     </div>
     {{ end }}
     <div class="form-submit">
+      <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
       <input type="submit" name="submit" value="submit">
     </div>
   </form>
