--- a/webapp/golang/templates/index.html
+++ b/webapp/golang/templates/index.html
@@ -8,7 +8,7 @@
       <textarea name="body"></textarea>
     </div>
     <div class="form-submit">
-      <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
+      <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
       <input type="submit" name="submit" value="submit">
     </div>
     {{if .Flash}}
