--- a/webapp/golang/templates/post.html
+++ b/webapp/golang/templates/post.html
@@ -27,7 +27,7 @@
       <form method="post" action="/comment">
         <input type="text" name="comment">
         <input type="hidden" name="post_id" value="{{.ID}}">
-        <input type="hidden" name="csrf_token" value="<%= escape_html session.id %>">
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
         <input type="submit" name="submit" value="submit">
       </form>
     </div>
